--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/node": "^20.4.2",
     "@types/uuid": "^10.0.0",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "@types/node-fetch": "^2.6.9",
+    "procfile": "^0.1.1"
   }
 }
