--- a/package.json
+++ b/package.json
@@ -8,15 +8,17 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "fastify": "^4.24.0",
+    "@fastify/basic-auth": "^6.1.0",
+    "@fastify/swagger": "^9.5.0",
+    "@fastify/swagger-ui": "^5.2.2",
+    "fastify": "^5.3.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.4.2",
+    "@types/node-fetch": "^2.6.9",
     "@types/uuid": "^10.0.0",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.1.3",
-    "@types/node-fetch": "^2.6.9",
-    "procfile": "^0.1.1"
+    "typescript": "^5.1.3"
   }
 }
