--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   },
   "dependencies": {
     "@fastify/basic-auth": "^6.1.0",
+    "@fastify/jwt": "^9.1.0",
     "@fastify/swagger": "^9.5.0",
     "@fastify/swagger-ui": "^5.2.2",
+    "bcrypt": "^5.1.1",
     "fastify": "^5.3.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.4.2",
     "@types/node-fetch": "^2.6.9",
     "@types/uuid": "^10.0.0",
